@@ -15,7 +15,7 @@
 %%  when \code{prod(dim(.))} is larger than \eqn{2^{31} - 1}.
 %
 
-\section{Changes in version 1.2-18 (2019-07-04, svn r3302)}{
+\section{Changes in version 1.2-18 (2019-07-04, svn r3303)}{
   \subsection{New Features}{
     \itemize{
       \item \code{Matrix(*, doDiag=TRUE)} is now obeyed also in the sparse
@@ -23,6 +23,10 @@
       E.g.,  \code{Matrix(0, 3,3)} returns a \code{"ddiMatrix"} instead of
       a \code{"dsCMatrix"} previously.  The latter is still returned from
       \code{Matrix(0, 3,3, doDiag=FALSE)}.
+
+      \item Subassignment to \code{"diagonalMatrix"} now returns
+      sparse \code{"triangularMatrix"} more often; also (sparse)
+      \code{"symmetricMatrix"}.
 
       \item \code{nearPD()} gets new option: If \code{base.matrix = TRUE},
       the resulting \code{mat} component is a \pkg{base} \code{matrix}, as
